# game10

./: .clang-format  CMakeLists.txt  README.md  audio.h  fira.spritefont  header.h  main.cpp  math.h  shaders.hlsl  shared.h
backup/: custom.css
notes/: notes.typ  numpy.ipynb  rasterization.ipynb  sound.ipynb  symbolic.ipynb
